# cosmonaut-code

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENCE  README.md  build.rs  review.txt
.github/workflows/: rust-check.yml
settings/: default.json
src/: lib.rs  main.rs
src/chat_prompts/: mod.rs
src/common/: mod.rs
src/config/: mod.rs
src/data/: mod.rs
src/dev_mode/: mod.rs
src/model/: mod.rs
src/provider/: api.rs  google.rs  lmstudio.rs  mod.rs  openai.rs  prompts.rs  static_config.rs
src/provider/google/: gemini.rs  mod.rs  vertex_ai.rs
src/provider/prompts/: code_review.json  readme_summary.json  repository_summary.json  security_review.json
src/provider/specification/: file_review.schema.json
src/retrieval/: code.rs  data.rs  git.rs  mod.rs
src/review/: code.rs  data.rs  mod.rs  output_file.rs  report.rs  tools.rs
src/review/templates/: report_template.html
src/settings/: mod.rs
src/ui/: mod.rs
