[package]
name = "cosmonaut_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.50"
image = "0.24.7"
log = "0.4.20"
env_logger = "0.10.1"
dotenvy = "0.15.7"
tokio = { version = "1.34.0", features = ["full"] }
reqwest = { version = "0.11.22", features = ["json"] }
config = "0.13.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"] }
walkdir = "2.4.0"
regex = "1.10.2"

[dev-dependencies]
tempfile = "3.8.1"
