[package]
name = "cosmonaut_code"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cosmonaut-nz/cosmonaut-code"
homepage = ""
description = """
A tool to review and assess the quality, security and maintainability of a codebase.
"""
categories = ["ai", "code"]
keywords = ["ai", "helper", "code-review", "assessment"]

[dependencies]
openai-api-rs = "2.1.0"
thiserror = "1.0.50"
image = "0.24.7"
log = "0.4.20"
env_logger = "0.10.1"
dotenvy = "0.15.7"
tokio = { version = "1.34.0", features = ["full"] }
reqwest = { version = "0.11.22", features = ["json"] }
config = "0.13.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"] }
walkdir = "2.4.0"
regex = "1.10.2"
async-trait = "0.1.74"
git2 = "0.18.1"
# linguist-rs = "1.1.0" # Using direct repository fetch in place of crates.io as version is out of date (local code changes)
linguist-rs = { git = "https://github.com/cosmonaut-nz/linguist-rs.git" }


[dev-dependencies]
tempfile = "3.8.1"

[build-dependencies]
linguist-rs-build = { git = "https://github.com/cosmonaut-nz/linguist-rs.git" } 