[package]
name = "cosmonaut_code"
version = "0.2.2"
edition = "2021"
license = "CC BY-NC-ND 4.0"
readme = "README.md"
authors = ["Mick Clarke <mick.clarke@cosmonaut.co.nz>"]
repository = "https://github.com/cosmonaut-nz/cosmonaut-code"
homepage = ""
description = """
A tool to review and assess the quality, security and maintainability of a codebase.
"""
categories = ["ai", "code"]
keywords = ["ai", "helper", "code-review", "assessment"]

[[bin]]
name = "cosmonaut_code"
path = "src/main.rs"

[dependencies]
openai-api-rs = "4.0.5"
google-generative-ai-rs = "0.1.6"
# google-generative-ai-rs = { git = "https://github.com/avastmick/google-generative-ai-rs.git", version = "0.1.3" }
thiserror = "1.0.55"
log = "0.4.20"
env_logger = "0.10.1"
inquire = "0.6.2"
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json"] }
config = "0.13.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.109"
chrono = { version = "0.4.31", features = ["serde"] }
walkdir = "2.4.0"
regex = "1.10.2"
async-trait = "0.1.76"
git2 = "0.18.1"
sha2 = "0.10.8"
handlebars = "5.0.0"
# linguist-rs = "1.1.2" # Using direct repository fetch in place of crates.io as version is out of date (local code changes)
linguist-rs = { git = "https://github.com/cosmonaut-nz/linguist-rs.git", version = "1.1.2" }
gcp_auth = "0.10.0"
url = "2.5.0"
# handler for async reponse streams
reqwest-streams = { version = "0.5.1", features = ["json"] }
futures = "0.3.30"


[dev-dependencies]
tempfile = "3.9.0"

[build-dependencies]
linguist-rs-build = { git = "https://github.com/cosmonaut-nz/linguist-rs.git", version = "1.1.1" }
